refactor css (js .style => js .classList.toggle)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<button id="cyclone-logo-button">
 		<img id="cyclone-logo" src="assets/images/logos/cycloneStudios.svg" alt="Cyclone Studios™">
 	</button>
-  
+	
   <div id="cyclone-accordion-container">
     <button id="cyclone-accordion-close-button">✕</button>
     <div id="cyclone-accordion">
@@ -197,7 +197,7 @@
 
   <figure>
     <!-- <figcaption>EXP</figcaption> -->
-    <audio controls autoplay loop src="assets/audio/thx.mp3"></audio>
+    <!-- <audio controls autoplay loop src="assets/audio/thx.mp3"></audio> -->
   </figure>
 </body>
 </html>
