--- a/index.html
+++ b/index.html
@@ -1,203 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>cycloneStudios</title>
-    <link rel="icon" href="assets/images/logos/cyclone-favicon.gif" type="image/gif">
-    <link rel="stylesheet" href="css/cyclone-reset.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link
+      rel="icon"
+      href="assets/images/logos/cyclone-favicon.gif"
+      type="image/gif"
+    />
+    <link rel="stylesheet" href="css/cyclone-reset.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script defer src="js/script.js"></script>
-</head>
-<body>
-	<button id="cyclone-logo-button">
-		<img id="cyclone-logo" src="assets/images/logos/cycloneStudios.svg" alt="Cyclone Studios™">
-	</button>
-	
-  <div id="cyclone-accordion-container">
-    <button id="cyclone-accordion-close-button">✕</button>
-    <div id="cyclone-accordion">
-      <div class="accordion-panel">
-        <h2 id="panel1-title" class="h2">
-					<button 
-						class="accordion-trigger"
-						aria-controls="panel1-content"
-						aria-expanded="true" 
-					>
-						<span class="accordion-title" id="panel1-title">Section</span>
-						<svg aria-hidden="false" class="accordion-icon">  
-							<use xlink:href="#cyclone-studios-c"></use>                      
-						</svg>
-					</button>
-				</h2>
+  </head>
+  <body>
+		<time>
+			<!-- * injected via JS -->
+		</time>
 
-				<div 
-					class="accordion-content" 
-					id="panel1-content"
-					aria-hidden="false"
-					aria-labelledby="panel1-title"
-					role="region"
-				>
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-						Dolorem quibusdam exercitationem sed voluptatum inventore.
-					</p>
-					<img 
-						class="accordion-image"
-						src="assets/images/cycloneStudios/fujuwhara.jpg" 
-						alt="Cyclone"
-					>
-        </div>
-			</div>
-      <div class="accordion-panel">
-        <h2 id="panel2-title" class="h2">
-					<button 
-						class="accordion-trigger"
-						aria-controls="panel2-content"
-						aria-expanded="false" 
-					>
-						<span class="accordion-title" id="panel2-title">Section</span>
-						<svg aria-hidden="true" class="accordion-icon">  
-							<use xlink:href="#cyclone-studios-c"></use>                      
-						</svg>
-					</button>
-				</h2>
+    <button id="cyclone-logo-button">
+      <img
+        id="cyclone-logo"
+        src="assets/images/logos/cycloneStudios.svg"
+        alt="Cyclone Studios™"
+      />
+    </button>
 
-				<div 
-					class="accordion-content" 
-					id="panel2-content"
-					aria-hidden="false"
-					aria-labelledby="panel2-title"
-					role="region"
-				>
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-						Dolorem quibusdam exercitationem sed voluptatum inventore.
-					</p>
-					<img 
-						class="accordion-image"
-						src="assets/images/cycloneStudios/fujuwhara.jpg" 
-						alt="Cyclone"
-					>
-        </div>
-			</div>
-      <div class="accordion-panel">
-        <h2 id="panel3-title" class="h2">
-					<button 
-						class="accordion-trigger"
-						aria-controls="panel3-content"
-						aria-expanded="false" 
-					>
-						<span class="accordion-title" id="panel3-title">Section</span>
-						<svg aria-hidden="true" class="accordion-icon">  
-							<use xlink:href="#cyclone-studios-c"></use>                      
-						</svg>
-					</button>
-				</h2>
+    <div id="cyclone-accordion-container">
+      <button id="cyclone-accordion-close-button">✕</button>
+      <div id="cyclone-accordion">
+        <div class="accordion-panel">
+          <h2 id="panel1-title" class="h2">
+            <button
+              class="accordion-trigger"
+              aria-controls="panel1-content"
+              aria-expanded="true"
+            >
+              <span class="accordion-title" id="panel1-title">Section</span>
+              <svg aria-hidden="false" class="accordion-icon">
+                <use xlink:href="#cyclone-studios-c"></use>
+              </svg>
+            </button>
+          </h2>
 
-				<div 
-					class="accordion-content" 
-					id="panel3-content"
-					aria-hidden="false"
-					aria-labelledby="panel3-title"
-					role="region"
-				>
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-						Dolorem quibusdam exercitationem sed voluptatum inventore.
-					</p>
-					<img 
-						class="accordion-image"
-						src="assets/images/cycloneStudios/fujuwhara.jpg" 
-						alt="Cyclone"
-					>
+          <div
+            class="accordion-content"
+            id="panel1-content"
+            aria-hidden="false"
+            aria-labelledby="panel1-title"
+            role="region"
+          >
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+              quibusdam exercitationem sed voluptatum inventore.
+            </p>
+            <img
+              class="accordion-image"
+              src="assets/images/cycloneStudios/fujuwhara.jpg"
+              alt="Cyclone"
+            />
+          </div>
         </div>
-			</div>
-      <div class="accordion-panel">
-        <h2 id="panel4-title" class="h2">
-					<button 
-						class="accordion-trigger"
-						aria-controls="panel4-content"
-						aria-expanded="false" 
-					>
-						<span class="accordion-title" id="panel4-title">Section</span>
-						<svg aria-hidden="true" class="accordion-icon">  
-							<use xlink:href="#cyclone-studios-c"></use>                      
-						</svg>
-					</button>
-				</h2>
+        <div class="accordion-panel">
+          <h2 id="panel2-title" class="h2">
+            <button
+              class="accordion-trigger"
+              aria-controls="panel2-content"
+              aria-expanded="false"
+            >
+              <span class="accordion-title" id="panel2-title">Section</span>
+              <svg aria-hidden="true" class="accordion-icon">
+                <use xlink:href="#cyclone-studios-c"></use>
+              </svg>
+            </button>
+          </h2>
 
-				<div 
-					class="accordion-content" 
-					id="panel4-content"
-					aria-hidden="false"
-					aria-labelledby="panel4-title"
-					role="region"
-				>
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-						Dolorem quibusdam exercitationem sed voluptatum inventore.
-					</p>
-					<img 
-						class="accordion-image"
-						src="assets/images/cycloneStudios/fujuwhara.jpg" 
-						alt="Cyclone"
-					>
+          <div
+            class="accordion-content"
+            id="panel2-content"
+            aria-hidden="false"
+            aria-labelledby="panel2-title"
+            role="region"
+          >
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+              quibusdam exercitationem sed voluptatum inventore.
+            </p>
+            <img
+              class="accordion-image"
+              src="assets/images/cycloneStudios/fujuwhara.jpg"
+              alt="Cyclone"
+            />
+          </div>
         </div>
-			</div>
-      <div class="accordion-panel">
-        <h2 id="panel5-title" class="h2">
-					<button 
-						class="accordion-trigger"
-						aria-controls="panel5-content"
-						aria-expanded="false" 
-					>
-						<span class="accordion-title" id="panel5-title">Section</span>
-						<svg aria-hidden="true" class="accordion-icon">  
-							<use xlink:href="#cyclone-studios-c"></use>                      
-						</svg>
-					</button>
-				</h2>
+        <div class="accordion-panel">
+          <h2 id="panel3-title" class="h2">
+            <button
+              class="accordion-trigger"
+              aria-controls="panel3-content"
+              aria-expanded="false"
+            >
+              <span class="accordion-title" id="panel3-title">Section</span>
+              <svg aria-hidden="true" class="accordion-icon">
+                <use xlink:href="#cyclone-studios-c"></use>
+              </svg>
+            </button>
+          </h2>
 
-				<div 
-					class="accordion-content" 
-					id="panel5-content"
-					aria-hidden="false"
-					aria-labelledby="panel5-title"
-					role="region"
-				>
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-						Dolorem quibusdam exercitationem sed voluptatum inventore.
-					</p>
-					<img 
-						class="accordion-image"
-						src="assets/images/cycloneStudios/fujuwhara.jpg" 
-						alt="Cyclone"
-					>
+          <div
+            class="accordion-content"
+            id="panel3-content"
+            aria-hidden="false"
+            aria-labelledby="panel3-title"
+            role="region"
+          >
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+              quibusdam exercitationem sed voluptatum inventore.
+            </p>
+            <img
+              class="accordion-image"
+              src="assets/images/cycloneStudios/fujuwhara.jpg"
+              alt="Cyclone"
+            />
+          </div>
         </div>
-			</div>
+        <div class="accordion-panel">
+          <h2 id="panel4-title" class="h2">
+            <button
+              class="accordion-trigger"
+              aria-controls="panel4-content"
+              aria-expanded="false"
+            >
+              <span class="accordion-title" id="panel4-title">Section</span>
+              <svg aria-hidden="true" class="accordion-icon">
+                <use xlink:href="#cyclone-studios-c"></use>
+              </svg>
+            </button>
+          </h2>
+
+          <div
+            class="accordion-content"
+            id="panel4-content"
+            aria-hidden="false"
+            aria-labelledby="panel4-title"
+            role="region"
+          >
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+              quibusdam exercitationem sed voluptatum inventore.
+            </p>
+            <img
+              class="accordion-image"
+              src="assets/images/cycloneStudios/fujuwhara.jpg"
+              alt="Cyclone"
+            />
+          </div>
+        </div>
+        <div class="accordion-panel">
+          <h2 id="panel5-title" class="h2">
+            <button
+              class="accordion-trigger"
+              aria-controls="panel5-content"
+              aria-expanded="false"
+            >
+              <span class="accordion-title" id="panel5-title">Section</span>
+              <svg aria-hidden="true" class="accordion-icon">
+                <use xlink:href="#cyclone-studios-c"></use>
+              </svg>
+            </button>
+          </h2>
+
+          <div
+            class="accordion-content"
+            id="panel5-content"
+            aria-hidden="false"
+            aria-labelledby="panel5-title"
+            role="region"
+          >
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+              quibusdam exercitationem sed voluptatum inventore.
+            </p>
+            <img
+              class="accordion-image"
+              src="assets/images/cycloneStudios/fujuwhara.jpg"
+              alt="Cyclone"
+            />
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <svg width="0" height="0" class="hidden">
-    <symbol id="cyclone-studios-c" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1080 1080">
-      <defs></defs>
-      <title>Cyclone Studios C</title>
-    <path d="M795.17,753.79A298.53,298.53,0,0,1,585.91,839c-165.4,0-299.5-134.07-299.5-299.5S420.51,240,585.91,240a298.47,298.47,0,0,1,207.27,83.31l-90.88,161c2.68.64,5.33,1.36,7.78,2.14,13.18,4.17,26.92,18.1,34.22,34.65a67.45,67.45,0,0,1-.52,56.31c-6.44,13.92-17.79,24.52-32.36,30.89Z"></path>
-      <path d="M725.94,569.15c-14.75,31.84-64.17,31.38-85,16.37,0,0,10.29,54.59-13.82,75.88s-42.39,21.17-63.32,13.36-38.39-25.29-35.92-68.69c-.13,2.5-12.61,7.79-14.44,8.67-10.77,5.13-22.74,8.3-34.75,7.58a55,55,0,0,1-29-10.52c-15.05-10.91-24.41-25.25-26.73-43.68-2.09-16.45,1-33.49,11-47a61.26,61.26,0,0,1,8-8.74c11.14-10.11,26.53-14.82,42-16.63-6.11-10.18-28.21-52.78,9.23-83.92,0,0,27.56-25.61,65.49-3.85,19.08,11,27.56,33.68,31,53.71,0,0,5.62-8,14.39-24.57s49.63-35.61,74.92,0c0,0,20.45,22.41-6,62,0,0,18.82,2.17,31.14,6.09S740.69,537.28,725.94,569.15Z"></path>
-    </symbol>
-  </svg>
+    <svg width="0" height="0" class="hidden">
+      <symbol
+        id="cyclone-studios-c"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 1080 1080"
+      >
+        <defs></defs>
+        <title>Cyclone Studios C</title>
+        <path
+          d="M795.17,753.79A298.53,298.53,0,0,1,585.91,839c-165.4,0-299.5-134.07-299.5-299.5S420.51,240,585.91,240a298.47,298.47,0,0,1,207.27,83.31l-90.88,161c2.68.64,5.33,1.36,7.78,2.14,13.18,4.17,26.92,18.1,34.22,34.65a67.45,67.45,0,0,1-.52,56.31c-6.44,13.92-17.79,24.52-32.36,30.89Z"
+        ></path>
+        <path
+          d="M725.94,569.15c-14.75,31.84-64.17,31.38-85,16.37,0,0,10.29,54.59-13.82,75.88s-42.39,21.17-63.32,13.36-38.39-25.29-35.92-68.69c-.13,2.5-12.61,7.79-14.44,8.67-10.77,5.13-22.74,8.3-34.75,7.58a55,55,0,0,1-29-10.52c-15.05-10.91-24.41-25.25-26.73-43.68-2.09-16.45,1-33.49,11-47a61.26,61.26,0,0,1,8-8.74c11.14-10.11,26.53-14.82,42-16.63-6.11-10.18-28.21-52.78,9.23-83.92,0,0,27.56-25.61,65.49-3.85,19.08,11,27.56,33.68,31,53.71,0,0,5.62-8,14.39-24.57s49.63-35.61,74.92,0c0,0,20.45,22.41-6,62,0,0,18.82,2.17,31.14,6.09S740.69,537.28,725.94,569.15Z"
+        ></path>
+      </symbol>
+    </svg>
 
-	<div id="code-container">
-		<img id="code" src="assets/images/cycloneStudios/code.webp" alt="Code">
-		<img id="cyclone-c" src="assets/images/logos/cyclone-c.gif" alt="Cyclone Studios C Logo">
-	</div>
+    <div id="code-container">
+      <img id="code" src="assets/images/cycloneStudios/code.webp" alt="Code" />
+      <img
+        id="cyclone-c"
+        src="assets/images/logos/cyclone-c.gif"
+        alt="Cyclone Studios C Logo"
+      />
+    </div>
 
-  <figure>
-    <!-- <figcaption>EXP</figcaption> -->
-    <!-- <audio controls autoplay loop src="assets/audio/thx.mp3"></audio> -->
-  </figure>
-</body>
+    <figure>
+      <!-- <figcaption>EXP</figcaption> -->
+      <!-- <audio controls autoplay loop src="assets/audio/thx.mp3"></audio> -->
+    </figure>
+  </body>
 </html>
