add some styling to accordion content

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               aria-controls="panel1-content"
               aria-expanded="true"
             >
-              <span class="accordion-title" id="panel1-title">Section</span>
+              <span class="accordion-title" id="panel1-title">About</span>
               <svg aria-hidden="false" class="accordion-icon">
                 <use xlink:href="#cyclone-studios-c"></use>
               </svg>
@@ -57,7 +57,7 @@
 						<p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              quibusdam exercitationem sed voluptatum inventore.
+              quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti unde dignissimos laudantium, harum dicta fugiat ullam expedita non maxime repudiandae fuga molestias ducimus vitae perferendis architecto at, nihil necessitatibus ratione!
             </p>
             <img
               class="accordion-image"
@@ -73,7 +73,7 @@
               aria-controls="panel2-content"
               aria-expanded="false"
             >
-              <span class="accordion-title" id="panel2-title">Section</span>
+              <span class="accordion-title" id="panel2-title">Projects</span>
               <svg aria-hidden="true" class="accordion-icon">
                 <use xlink:href="#cyclone-studios-c"></use>
               </svg>
@@ -90,7 +90,7 @@
 						<p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              quibusdam exercitationem sed voluptatum inventore.
+              quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia laudantium, officiis, tempore in numquam modi vel doloremque quam fugit pariatur molestias veniam veritatis omnis! Aperiam exercitationem minus asperiores saepe debitis.
             </p>
             <img
               class="accordion-image"
@@ -106,7 +106,7 @@
               aria-controls="panel3-content"
               aria-expanded="false"
             >
-              <span class="accordion-title" id="panel3-title">Section</span>
+              <span class="accordion-title" id="panel3-title">Blog</span>
               <svg aria-hidden="true" class="accordion-icon">
                 <use xlink:href="#cyclone-studios-c"></use>
               </svg>
@@ -123,7 +123,7 @@
 						<p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              quibusdam exercitationem sed voluptatum inventore.
+              quibusdam exercitationem sed voluptatum inventore. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, quasi in harum aspernatur nihil sapiente adipisci impedit fugit! Ipsa, temporibus nobis? Velit odit in possimus dolore dolorum non incidunt alias.
             </p>
             <img
               class="accordion-image"
@@ -139,7 +139,7 @@
               aria-controls="panel4-content"
               aria-expanded="false"
             >
-              <span class="accordion-title" id="panel4-title">Section</span>
+              <span class="accordion-title" id="panel4-title">Trending</span>
               <svg aria-hidden="true" class="accordion-icon">
                 <use xlink:href="#cyclone-studios-c"></use>
               </svg>
@@ -156,7 +156,7 @@
 						<p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              quibusdam exercitationem sed voluptatum inventore.
+              quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore animi aliquam soluta dolore perspiciatis, recusandae ab error iusto iste? Eaque, ut? Odio reprehenderit vitae ducimus, ab atque tenetur labore quaerat.
             </p>
             <img
               class="accordion-image"
@@ -172,7 +172,7 @@
               aria-controls="panel5-content"
               aria-expanded="false"
             >
-              <span class="accordion-title" id="panel5-title">Section</span>
+              <span class="accordion-title" id="panel5-title">Contact</span>
               <svg aria-hidden="true" class="accordion-icon">
                 <use xlink:href="#cyclone-studios-c"></use>
               </svg>
@@ -189,7 +189,7 @@
 						<p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              quibusdam exercitationem sed voluptatum inventore.
+              quibusdam exercitationem sed voluptatum inventore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae temporibus unde, a reprehenderit assumenda provident. Impedit repellat exercitationem, quae accusantium sequi ad, illo fuga quisquam itaque minima iure ipsum voluptate.
             </p>
             <img
               class="accordion-image"
