adjust shadow colors on cyclone logo

--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
     />
     <link rel="stylesheet" href="css/cyclone-reset.css" />
     <link rel="stylesheet" href="css/styles.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <script defer src="js/script.js"></script>
   </head>
   <body>
-		<time class="no-select">
-			<!-- * injected via JS -->
-		</time>
+    <time class="no-select">
+      <!-- * injected via JS -->
+    </time>
 
     <button id="cyclone-logo-button" class="no-select">
       <img
@@ -31,7 +34,12 @@
     </button>
 
     <div id="cyclone-accordion-container">
-      <button id="cyclone-accordion-close-button" aria-label="Accordion Close Button">✕</button>
+      <button
+        id="cyclone-accordion-close-button"
+        aria-label="Accordion Close Button"
+      >
+        ✕
+      </button>
       <div id="cyclone-accordion">
         <div class="accordion-panel">
           <h2 id="panel1-title" class="h2">
@@ -54,10 +62,14 @@
             aria-labelledby="panel1-title"
             role="region"
           >
-						<p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
+            <p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti unde dignissimos laudantium, harum dicta fugiat ullam expedita non maxime repudiandae fuga molestias ducimus vitae perferendis architecto at, nihil necessitatibus ratione!
+              quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum
+              dolor sit amet consectetur adipisicing elit. Deleniti unde
+              dignissimos laudantium, harum dicta fugiat ullam expedita non
+              maxime repudiandae fuga molestias ducimus vitae perferendis
+              architecto at, nihil necessitatibus ratione!
             </p>
             <img
               class="accordion-image"
@@ -87,10 +99,14 @@
             aria-labelledby="panel2-title"
             role="region"
           >
-						<p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
+            <p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia laudantium, officiis, tempore in numquam modi vel doloremque quam fugit pariatur molestias veniam veritatis omnis! Aperiam exercitationem minus asperiores saepe debitis.
+              quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum
+              dolor sit amet consectetur adipisicing elit. Mollitia laudantium,
+              officiis, tempore in numquam modi vel doloremque quam fugit
+              pariatur molestias veniam veritatis omnis! Aperiam exercitationem
+              minus asperiores saepe debitis.
             </p>
             <img
               class="accordion-image"
@@ -120,10 +136,13 @@
             aria-labelledby="panel3-title"
             role="region"
           >
-						<p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
+            <p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              quibusdam exercitationem sed voluptatum inventore. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, quasi in harum aspernatur nihil sapiente adipisci impedit fugit! Ipsa, temporibus nobis? Velit odit in possimus dolore dolorum non incidunt alias.
+              quibusdam exercitationem sed voluptatum inventore. Lorem ipsum,
+              dolor sit amet consectetur adipisicing elit. Omnis, quasi in harum
+              aspernatur nihil sapiente adipisci impedit fugit! Ipsa, temporibus
+              nobis? Velit odit in possimus dolore dolorum non incidunt alias.
             </p>
             <img
               class="accordion-image"
@@ -153,10 +172,14 @@
             aria-labelledby="panel4-title"
             role="region"
           >
-						<p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
+            <p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore animi aliquam soluta dolore perspiciatis, recusandae ab error iusto iste? Eaque, ut? Odio reprehenderit vitae ducimus, ab atque tenetur labore quaerat.
+              quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum
+              dolor sit amet consectetur adipisicing elit. Labore animi aliquam
+              soluta dolore perspiciatis, recusandae ab error iusto iste? Eaque,
+              ut? Odio reprehenderit vitae ducimus, ab atque tenetur labore
+              quaerat.
             </p>
             <img
               class="accordion-image"
@@ -186,10 +209,14 @@
             aria-labelledby="panel5-title"
             role="region"
           >
-						<p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
+            <p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              quibusdam exercitationem sed voluptatum inventore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae temporibus unde, a reprehenderit assumenda provident. Impedit repellat exercitationem, quae accusantium sequi ad, illo fuga quisquam itaque minima iure ipsum voluptate.
+              quibusdam exercitationem sed voluptatum inventore. Lorem ipsum
+              dolor, sit amet consectetur adipisicing elit. Molestiae temporibus
+              unde, a reprehenderit assumenda provident. Impedit repellat
+              exercitationem, quae accusantium sequi ad, illo fuga quisquam
+              itaque minima iure ipsum voluptate.
             </p>
             <img
               class="accordion-image"
@@ -229,7 +256,12 @@
 
     <figure>
       <!-- <figcaption>EXP</figcaption> -->
-      <audio controls autoplay loop src="assets/audio/echoing-voices.mp3"></audio>
+      <audio
+        controls
+        autoplay
+        loop
+        src="assets/audio/echoing-voices.mp3"
+      ></audio>
     </figure>
   </body>
 </html>
