--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               aria-controls="panel2-content"
               aria-expanded="false"
             >
-              <span class="accordion-title" id="panel2-title">Projects</span>
+              <span class="accordion-title" id="panel2-title">Services</span>
               <svg aria-hidden="true" class="accordion-icon">
                 <use xlink:href="#cyclone-studios-c"></use>
               </svg>
@@ -122,7 +122,7 @@
               aria-controls="panel3-content"
               aria-expanded="false"
             >
-              <span class="accordion-title" id="panel3-title">Blog</span>
+              <span class="accordion-title" id="panel3-title">Projects</span>
               <svg aria-hidden="true" class="accordion-icon">
                 <use xlink:href="#cyclone-studios-c"></use>
               </svg>
@@ -158,7 +158,7 @@
               aria-controls="panel4-content"
               aria-expanded="false"
             >
-              <span class="accordion-title" id="panel4-title">Trending</span>
+              <span class="accordion-title" id="panel4-title">News</span>
               <svg aria-hidden="true" class="accordion-icon">
                 <use xlink:href="#cyclone-studios-c"></use>
               </svg>
