refactor cyclone logo & time capsule css

--- a/index.html
+++ b/index.html
@@ -21,9 +21,18 @@
     <script defer src="js/script.js"></script>
   </head>
   <body>
-    <time class="no-select">
-      <!-- * injected via JS -->
-    </time>
+    <section id="time-capsule">
+      <time class="no-select">
+        <!-- * injected via JS -->
+      </time>
+      <div id="code-container" class="no-select">
+        <img
+          id="code"
+          src="assets/images/cycloneStudios/code.webp"
+          alt="Code"
+        />
+      </div>
+    </section>
 
     <main>
       <button id="cyclone-logo-button" class="no-select">
@@ -33,7 +42,7 @@
           alt="Cyclone Studios™"
         />
       </button>
-      <section id="cyclone-accordion-container">
+      <div id="cyclone-accordion-container">
         <button
           id="cyclone-accordion-close-button"
           aria-label="Accordion Close Button"
@@ -101,10 +110,10 @@
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
                 quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum
-                dolor sit amet consectetur adipisicing elit. Mollitia laudantium,
-                officiis, tempore in numquam modi vel doloremque quam fugit
-                pariatur molestias veniam veritatis omnis! Aperiam exercitationem
-                minus asperiores saepe debitis.
+                dolor sit amet consectetur adipisicing elit. Mollitia
+                laudantium, officiis, tempore in numquam modi vel doloremque
+                quam fugit pariatur molestias veniam veritatis omnis! Aperiam
+                exercitationem minus asperiores saepe debitis.
               </p>
               <img
                 class="accordion-image"
@@ -137,9 +146,10 @@
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
                 quibusdam exercitationem sed voluptatum inventore. Lorem ipsum,
-                dolor sit amet consectetur adipisicing elit. Omnis, quasi in harum
-                aspernatur nihil sapiente adipisci impedit fugit! Ipsa, temporibus
-                nobis? Velit odit in possimus dolore dolorum non incidunt alias.
+                dolor sit amet consectetur adipisicing elit. Omnis, quasi in
+                harum aspernatur nihil sapiente adipisci impedit fugit! Ipsa,
+                temporibus nobis? Velit odit in possimus dolore dolorum non
+                incidunt alias.
               </p>
               <img
                 class="accordion-image"
@@ -172,10 +182,10 @@
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
                 quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum
-                dolor sit amet consectetur adipisicing elit. Labore animi aliquam
-                soluta dolore perspiciatis, recusandae ab error iusto iste? Eaque,
-                ut? Odio reprehenderit vitae ducimus, ab atque tenetur labore
-                quaerat.
+                dolor sit amet consectetur adipisicing elit. Labore animi
+                aliquam soluta dolore perspiciatis, recusandae ab error iusto
+                iste? Eaque, ut? Odio reprehenderit vitae ducimus, ab atque
+                tenetur labore quaerat.
               </p>
               <img
                 class="accordion-image"
@@ -208,10 +218,10 @@
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
                 quibusdam exercitationem sed voluptatum inventore. Lorem ipsum
-                dolor, sit amet consectetur adipisicing elit. Molestiae temporibus
-                unde, a reprehenderit assumenda provident. Impedit repellat
-                exercitationem, quae accusantium sequi ad, illo fuga quisquam
-                itaque minima iure ipsum voluptate.
+                dolor, sit amet consectetur adipisicing elit. Molestiae
+                temporibus unde, a reprehenderit assumenda provident. Impedit
+                repellat exercitationem, quae accusantium sequi ad, illo fuga
+                quisquam itaque minima iure ipsum voluptate.
               </p>
               <img
                 class="accordion-image"
@@ -237,11 +247,10 @@
             ></path>
           </symbol>
         </svg>
-      </section>
+      </div>
     </main>
 
-    <div id="code-container" class="no-select">
-      <img id="code" src="assets/images/cycloneStudios/code.webp" alt="Code" />
+    <div id="cyclone-cursor">
       <img
         id="cyclone-c"
         src="assets/images/logos/cyclone-c.gif"
